<resources>
	<string name="_empty"></string>
	<string name="a_data_src_db">Database</string>
	<string name="a_data_src_lv">Geocaching Live</string>
	<string name="a_fn_publish1">Just save Field Note</string>
	<string name="a_fn_publish2">Promote to log</string>
	<string name="a_fn_publish3">Always ask</string>
	<string name="a_fn_time_1">Exact time</string>
	<string name="a_fn_time_10">10 minutes</string>
	<string name="a_fn_time_15">15 minutes</string>
	<string name="a_fn_time_5">5 minutes</string>
	<string name="a_found_all">All</string>
	<string name="a_found_no">Not Found</string>
	<string name="a_found_yes">Found</string>
	<string name="a_mapwpt_all">Display all</string>
	<string name="a_mapwpt_nfnd">Not found caches only</string>
	<string name="a_mapwpt_none">Don\'t display</string>
	<string name="a_mapwpt_sel">Current cache only</string>
	<string name="a_ori_auto">Automatically</string>
	<string name="a_ori_land">Landscape</string>
	<string name="a_ori_port">Portrait</string>
	<string name="a_owner_all">All</string>
	<string name="a_owner_foreign">Foreign</string>
	<string name="a_owner_own">Own</string>
	<string name="a_pos_gps">GPS Position</string>
	<string name="a_pos_man">Manual Coordinates</string>
	<string name="a_tag_excl">Does not have a tag with value</string>
	<string name="a_tag_incl">Must have a tag with value</string>
	<string name="a_tag_off">Regardless tags</string>
	<string name="a_theme_dark">Dark Theme</string>
	<string name="a_theme_light">Light Theme</string>
	<string name="a_units_imp">Imperial (ft, mile)</string>
	<string name="a_units_mtr">Metric (m, km)</string>
	<string name="about_1">Comprehensive Geocaching solution</string>
	<string name="about_appver">Version of application</string>
	<string name="about_dbver">Version of GeoGet database</string>
	<string name="about_live_1">Nickname</string>
	<string name="about_live_2">Member type</string>
	<string name="about_live_3">Find count</string>
	<string name="about_live_4">Hide count</string>
	<string name="about_live_5">Full cache listing</string>
	<string name="about_live_6">Lite cache information</string>
	<string name="about_live_7">Limit</string>
	<string name="about_live_8">Used</string>
	<string name="about_live_9">may be inaccurate, updates on data download</string>
	<string name="about_live_status">Geocaching Live status</string>
	<string name="about_release_notes">Release notes</string>
	<string name="about_sqlver">Version of SQLite</string>
	<string name="about_url">http://www.adrake.cz/doku.php?id=en:start</string>
	<string name="app_name">a:Drake</string>
	<string name="cache_del_confirm">Do you really want to delete this cache?</string>
	<string name="cache_deleted">was deleted</string>
	<string name="close">Close</string>
	<string name="cps_north_up">Set to North always up</string>
	<string name="cps_position">Position</string>
	<string name="cps_radar_off">Always use compass</string>
	<string name="cps_radar_on">Use radar on final approach</string>
	<string name="cps_rotate">Set to rotate</string>
	<string name="cps_target">Target</string>
	<string name="db_stf">Sel/Total/Fnd</string>
	<string name="det_compass">Compass</string>
	<string name="det_gallery">Gallery</string>
	<string name="det_listing">Listing</string>
	<string name="det_logs">Logs</string>
	<string name="det_m_del">Delete</string>
	<string name="det_m_ggatt">Attachment GeoGet</string>
	<string name="det_m_gglist">Listing GeoGet</string>
	<string name="det_m_openweb">Open on Web</string>
	<string name="det_m_refr_logs">Logs from web</string>
	<string name="det_m_refresh">Refresh from web</string>
	<string name="det_m_setref">Set as Reference Point</string>
	<string name="det_m_setref_toast">was set as Reference Point</string>
	<string name="det_m_sysnav">Navigate using Google Maps</string>
	<string name="det_m_del_offln">Delete offline files</string>
	<string name="det_m_del_off2">Do you really want to delete all offline files of this cache?</string>
	<string name="det_m_del_off3">files deleted</string>
	<string name="det_main">Main</string>
	<string name="det_map">Map</string>
	<string name="det_my_log">My log</string>
	<string name="det_navigate">Navigate to cache</string>
	<string name="det_note">Note</string>
	<string name="det_note_hint">Note\n\nUse pencil at top right to edit the variables for the formula</string>
	<string name="det_tags">Tags</string>
	<string name="det_vars_hint">Variables for the formula\n\n A=1\n B:2\n etc…</string>
	<string name="det_wpts">Waypoints</string>
	<string name="dlg_dnl_live">Downloading Live data. Please wait…</string>
	<string name="dlg_loading">Reading data. Please wait…</string>
	<string name="dlg_saving">Saving data. Please wait…</string>
	<string name="error_liveapi_gen">Cannot read data from Geocaching Live</string>
	<string name="eval_invalid_number">Invalid number</string>
	<string name="eval_missing_operand">Missing operand for</string>
	<string name="eval_parse_error">Parsing error</string>
	<string name="eval_unknown_error">Unknown error</string>
	<string name="eval_variable_not_set">Unbound variable</string>
	<string name="eval_zero_division">Division by zero</string>
	<string name="exp_fn_clear">Delete exported logs</string>
	<string name="exp_fn_file">Export to file</string>
	<string name="exp_fn_help">[T] time [N] number [L] log text</string>
	<string name="exp_fn_progress">Exporting Field Notes, please wait…</string>
	<string name="exp_fn_result">#1 Field Notes exported to \'#2\'</string>
	<string name="exp_fn_save">Save Field Notes</string>
	<string name="exp_fn_start_date">Start date</string>
	<string name="exp_fn_template">Template of log</string>
	<string name="exp_tl_progress">Exporting Track Logs, please wait…</string>
	<string name="exp_tl_result">#1 Track logs exported to \'#2\'</string>
	<string name="flt_active">Active</string>
	<string name="flt_address">Address</string>
	<string name="flt_archived">Archived</string>
	<string name="flt_cacheType">Type of cache</string>
	<string name="flt_code">Cache code</string>
	<string name="flt_del_confirm">Do you really want to delete this filter?</string>
	<string name="flt_diff">Difficulty</string>
	<string name="flt_disabled">Disabled</string>
	<string name="flt_distance">Distance (km)</string>
	<string name="flt_foundStatus">Have found?</string>
	<string name="flt_has_final">Must have final waypoint</string>
	<string name="flt_m_clear">Clear</string>
	<string name="flt_m_delete">Delete</string>
	<string name="flt_m_load">Load</string>
	<string name="flt_m_save">Save</string>
	<string name="flt_m_search">Search</string>
	<string name="flt_man_coords">Manual Coordinates</string>
	<string name="flt_max_rows">Max. number of selected caches</string>
	<string name="flt_name">Name</string>
	<string name="flt_owned">Own or foreign?</string>
	<string name="flt_owner">Owner</string>
	<string name="flt_position">Position</string>
	<string name="flt_properties">Properties</string>
	<string name="flt_propSumm">Name, owner, status…</string>
	<string name="flt_refPoint">Reference point</string>
	<string name="flt_save_name">Name of new filter</string>
	<string name="flt_save_new">-- new --</string>
	<string name="flt_sel_all">Nothing checked means select all</string>
	<string name="flt_size">Container size</string>
	<string name="flt_size_nc">Not choosen</string>
	<string name="flt_size_o">Other</string>
	<string name="flt_stars_ge">Greater or equal</string>
	<string name="flt_stars_le">Less or equal</string>
	<string name="flt_tab_ctyp">Cache Type</string>
	<string name="flt_tab_loc">Location</string>
	<string name="flt_tab_prop">Properties</string>
	<string name="flt_tab_stars">Stars</string>
	<string name="flt_tab_tags">Tags</string>
	<string name="flt_tab_wtyp">Wpt Type</string>
	<string name="flt_tag_any">-- any value --</string>
	<string name="flt_tag_category">Category</string>
	<string name="flt_tag_value">Value</string>
	<string name="flt_tags">Tags</string>
	<string name="flt_tearth">Earth Cache</string>
	<string name="flt_terr">Terrain</string>
	<string name="flt_tevent">Event</string>
	<string name="flt_tlett">Letterbox Hybrid</string>
	<string name="flt_tmulti">Multi Cache</string>
	<string name="flt_tmyst">Mystery Cache</string>
	<string name="flt_tother">Other Caches</string>
	<string name="flt_ttradi">Traditional Cache</string>
	<string name="flt_tvirt">Virtual Cache</string>
	<string name="flt_twcam">WebCam Cache</string>
	<string name="flt_twfin">Final Location</string>
	<string name="flt_twig">Wherigo Cache</string>
	<string name="flt_twpa">Parking Area</string>
	<string name="flt_twqta">Question to Answer</string>
	<string name="flt_twref">Reference Point</string>
	<string name="flt_twsom">Stage of Multi Cache</string>
	<string name="flt_twth">Trail Head</string>
	<string name="flt_use_tag">Search by tags</string>
	<string name="flt_wptType">Type of waypoint</string>
	<string name="gps_avg">Averaging</string>
	<string name="gps_avg_avgp">Averaged position</string>
	<string name="gps_avg_curr">Current measurement</string>
	<string name="gps_avg_cwpt">Create waypoint</string>
	<string name="gps_avg_devi">Deviation</string>
	<string name="gps_avg_nosa">No. of samples</string>
	<string name="gps_avg_stop">Stop</string>
	<string name="gps_avg_strt">Start</string>
	<string name="gps_status">GPS</string>
	<string name="gps_trip">Trip</string>
	<string name="gps_trip_apr">Altitude profile</string>
	<string name="gps_trip_avs">Avergare speed</string>
	<string name="gps_trip_dis">Track recording is disabled!\n\nPlease adjust map settings to see trip information.</string>
	<string name="gps_trip_dur">Trip duration</string>
	<string name="gps_trip_maa">Maximum altitude</string>
	<string name="log_add">Create new log</string>
	<string name="no_logs">There are no pending logs</string>
	<string name="pl_delete">Delete</string>
	<string name="pl_export_fn">Export Field Notes</string>
	<string name="pl_invert_sel">Invert selection</string>
	<string name="pl_select_all">Select all</string>
	<string name="pl_send_web">Send to web</string>
	<string name="pref_alert_1">First alert</string>
	<string name="pref_alert_2">Second alert</string>
	<string name="pref_alert_dist">Distance for alert (m)</string>
	<string name="pref_alert_on">Alert on proximity</string>
	<string name="pref_data_src">Data source</string>
	<string name="pref_database">Database</string>
	<string name="pref_del_fn">Delete after export</string>
	<string name="pref_del_fn1">Delete log after export of Field Notes</string>
	<string name="pref_design">Design</string>
	<string name="pref_extra_founds">No. of finds not in database</string>
	<string name="pref_files_folder">Files folder</string>
	<string name="pref_fn_publish">Send to web</string>
	<string name="pref_fn_time">Round Field Notes time</string>
	<string name="pref_logs">Logs and Field Notes</string>
	<string name="pref_map_disp_track">Display track on map</string>
	<string name="pref_map_src">Map source</string>
	<string name="pref_map_tcol">Track Color</string>
	<string name="pref_map_type">Map layer</string>
	<string name="pref_map_wpts">Waypoints on the map</string>
	<string name="pref_nickname">Nickname</string>
	<string name="pref_settings">Settings</string>
	<string name="pref_theme">Color theme</string>
	<string name="pref_units">Units</string>
	<string name="search_m_sort">Sort</string>
	<string name="search_m_sort_age">Age</string>
	<string name="search_m_sort_auth">Owner name</string>
	<string name="search_m_sort_diff">Difficulty</string>
	<string name="search_m_sort_dist">Distance</string>
	<string name="search_m_sort_found">Found date</string>
	<string name="search_m_sort_name">Name</string>
	<string name="search_m_sort_size">Size</string>
	<string name="search_m_sort_terr">Terrain</string>
	<string name="search_m_status">Update status</string>
	<string name="wpt_lat">Latitude</string>
	<string name="wpt_lon">Longitude</string>
</resources>