<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="files"
        android:title="@string/pref_files_folder" >
        <cz.adrake.ui.FilePreference
            android:defaultValue="/mnt/sdcard/adrake/cachedb.db3"
            android:key="database"
            android:title="@string/pref_database" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="settings"
        android:title="@string/pref_settings" >
        <ListPreference
            android:defaultValue="db"
            android:entries="@array/dataSrc"
            android:entryValues="@array/dataSrcValues"
            android:key="dataSrc"
            android:title="@string/pref_data_src" />

        <cz.adrake.ui.EditTextDelPreference
            android:key="nickname"
            android:title="@string/pref_nickname" />

        <ListPreference
            android:defaultValue="metric"
            android:entries="@array/units"
            android:entryValues="@array/unitsValues"
            android:key="units"
            android:title="@string/pref_units" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="logs"
        android:title="@string/pref_logs" >
        <ListPreference android:key="pref_fn_time" android:title="@string/pref_fn_time" android:entries="@array/fn_time" android:entryValues="@array/fn_timeValues" android:defaultValue="5"/><cz.adrake.ui.EditLogTemplatePreference
            android:defaultValue="[T] #[N]\r\n[L]"
            android:key="exp_fn_template"
            android:title="@string/exp_fn_template" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_fn_delete"
            android:summary="@string/pref_del_fn1"
            android:title="@string/pref_del_fn" />

        <cz.adrake.ui.EditTextDelPreference
            android:defaultValue="0"
            android:key="pref_extra_founds"
            android:title="@string/pref_extra_founds" />
        
    </PreferenceCategory>
    <PreferenceCategory
        android:key="design"
        android:title="@string/pref_design" >
        <ListPreference
            android:defaultValue="LightTheme"
            android:entries="@array/themes"
            android:entryValues="@array/themeValues"
            android:key="theme"
            android:title="@string/pref_theme" />
    </PreferenceCategory>

</PreferenceScreen>