<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_refresh" 
        android:title="@string/det_m_refresh" 
        android:icon="@drawable/ic_menu_refresh"></item>

    <item android:id="@+id/menu_setref" 
        android:title="@string/det_m_setref" 
        android:icon="@drawable/ic_menu_setref"></item>

    <item android:id="@+id/menu_wopen" 
        android:title="@string/det_m_openweb" 
        android:icon="@drawable/ic_menu_web"></item>

    <item android:id="@+id/menu_delete" 
        android:title="@string/det_m_del" 
        android:icon="@drawable/ic_menu_delete"></item>
    
    <item android:id="@+id/menu_gglist" 
        android:title="@string/det_m_gglist" 
        android:icon="@drawable/ic_menu_gglist"></item>
                    
    <item android:id="@+id/menu_ggatt" 
        android:title="@string/det_m_ggatt" 
        android:icon="@drawable/ic_menu_attachment" android:enabled="false" android:visible="false"></item>
</menu>