<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="map"
        android:title="@string/det_map" >
        <ListPreference
            android:defaultValue="none"
            android:entries="@array/mapWpts"
            android:entryValues="@array/mapWptsValues"
            android:key="pref_map_wpts"
            android:title="@string/pref_map_wpts" />

        <CheckBoxPreference
            android:key="pref_map_disp_track"
            android:title="@string/pref_map_disp_track" />

        <cz.adrake.ui.ColorDialogPreference
            android:dependency="pref_map_disp_track"
            android:defaultValue="@color/track"
            android:key="pref_map_tcol"
            android:title="@string/pref_map_tcol" />

        <ListPreference
            android:key="pref_map_src"
            android:title="@string/pref_map_src" />
        <ListPreference
            android:key="pref_map_type"
            android:title="@string/pref_map_type" />
    </PreferenceCategory>

</PreferenceScreen>