<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn = "true" >	

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:choiceMode="multipleChoice"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_logs" />

    <LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    
        <Button
	        android:id="@+id/btn_add"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/log_add"
	        android:layout_weight="1" />

        <Button
	        android:id="@+id/btn_del"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/pl_delete"
	        android:layout_weight="1" />
        
	</LinearLayout>
</LinearLayout>